--- a/src/app/candidate-profile/candidate-profile.component.html
+++ b/src/app/candidate-profile/candidate-profile.component.html
@@ -2,13 +2,13 @@
     <div class="container py-5">
       <div class="row">
         <div class="col">
-          <nav aria-label="breadcrumb" class="bg-light rounded-3 p-3 mb-4">
+          <!-- <nav aria-label="breadcrumb" class="bg-light rounded-3 p-3 mb-4">
             <ol class="breadcrumb mb-0">
               <li class="breadcrumb-item active" aria-current="page">User Profile</li>
               <button class= "updatebutton" mat-flat-button color="primary">Update</button>
             </ol>
             
-          </nav>
+          </nav> -->
         </div>
       </div>
       <div class="row">
@@ -18,8 +18,8 @@
               <img src="https://openclipart.org/image/2400px/svg_to_png/247319/abstract-user-flat-3.png" alt="avatar"
                 class="rounded-circle img-fluid" style="width: 150px;">
               <h1 class="my-3">{{candidateName}}</h1>
-              <p class="text-muted mb-1">Full Stack Developer</p>
-              <p class="text-muted mb-4">Location chennai</p>
+              <!-- <p class="text-muted mb-1">Full Stack Developer</p> -->
+              <!-- <p class="text-muted mb-4">Location chennai</p> -->
               <div class="d-flex justify-content-center mb-2 container">
                 <button mat-button (click)="openDialog()">Resume</button>
               </div>
@@ -56,16 +56,7 @@
                   <p class="mb-0">Phone</p>
                 </div>
                 <div class="col-sm-9">
-                  <p class="text-muted mb-0">hii{{candidateNo}}</p>
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <p class="mb-0">Mobile</p>
-                </div>
-                <div class="col-sm-9">
-                  <p class="text-muted mb-0">123456789</p>
+                  <p class="text-muted mb-0">{{candidateNo}}</p>
                 </div>
               </div>
               <hr>
@@ -74,7 +65,16 @@
                   <p class="mb-0">Address</p>
                 </div>
                 <div class="col-sm-9">
-                  <p class="text-muted mb-0">chennai</p>
+                  <p class="text-muted mb-0">{{candidateLocation}}</p>
+                </div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col-sm-3">
+                  <p class="mb-0">Resume</p>
+                </div>
+                <div class="col-sm-9">
+                  <p class="text-muted mb-0">{{candidateResume}}</p>
                 </div>
               </div>
             </div>
