--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
             <div class="card">
                 <div class="text-center">
                     <h1>Login</h1>
-                    <h4>Please enter main & password</h4>
+                    <h4>Please enter mail & password</h4>
                 </div>
                 <form [formGroup]= "loginForm" (ngSubmit)= "login()">
                     <div class="mb-3">
@@ -18,7 +18,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Login</button>
                 </form>
-                <a style="color: black; margin-top: 10px;" routerLink="/signup"> New user? Click to SignUp</a>
+                <a style="color: black; margin-top: 10px;" routerLink="/signup"> New user? Click to Register</a>
             </div>
         </div>
     </div>
