--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,61 +1,9 @@
-<link
-  href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
-  rel="stylesheet"
-  id="bootstrap-css"
-/>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-
-<link
-  href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
-  rel="stylesheet"
-/>
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
-<!-- <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container"> -->
-<!-- Brand and toggle get grouped for better mobile display -->
-<!-- <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="http://gaadiexpert.com/">Brand</a>
-    </div> -->
-
-<!-- Collect the nav links, forms, and other content for toggling -->
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-  <!-- <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About Us</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contact Us</a></li> 
-      </ul> -->
-  <!-- </div>
-      </div>
-  </nav> -->
   <div class="image-aboutus-banner" style="margin-top: 70px">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <h1 class="lg-text">About Us</h1>
-          <p class="image-aboutus-para">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          </p>
         </div>
       </div>
     </div>
@@ -65,7 +13,7 @@
       <div class="row">
         <div class="col-md-8 col-sm-6 col-xs-8">
           <ol class="breadcrumb">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="">Home</a></li>
             <li class="active">About Us</li>
           </ol>
         </div>
@@ -119,11 +67,11 @@
       <div class="col-md-4 team-box">
         <div class="team-img thumbnail">
           <div class="team-content">
-            <h3>ManiKandan Anand</h3>
+            <h3>Manigandan A</h3>
             <div class="border-team"></div>
             <p>Founder & CEO of Careerskart</p>
             <div class="social-icons">
-              <a href="https://www.facebook.com/"
+              <!-- <a href="https://www.facebook.com/"
                 ><i
                   id="social-fb"
                   class="fa fa-facebook-square fa-3x social"
@@ -137,7 +85,7 @@
                   id="social-gp"
                   class="fa fa-google-plus-square fa-3x social"
                 ></i
-              ></a>
+              ></a> -->
               <a href="amanigandan@careerskart.in"
                 ><i
                   id="social-em"
@@ -151,11 +99,11 @@
       <div class="col-md-4 team-box">
         <div class="team-img thumbnail">
           <div class="team-content">
-            <h3>Vinoth</h3>
+            <h3>Vinoth S</h3>
             <div class="border-team"></div>
             <p>COO of Careerskart</p>
             <div class="social-icons">
-              <a href="https://www.facebook.com/"
+              <!-- <a href="https://www.facebook.com/"
                 ><i
                   id="social-fb"
                   class="fa fa-facebook-square fa-3x social"
@@ -169,7 +117,7 @@
                   id="social-gp"
                   class="fa fa-google-plus-square fa-3x social"
                 ></i
-              ></a>
+              ></a> -->
               <a href="vinoths@careerskart.in"
                 ><i
                   id="social-em"
@@ -223,50 +171,28 @@
             beginning with career counselling
           </p>
           <div class="social-icons">
-            <a href="https://www.facebook.com/"
+            <!-- <a href="https://www.facebook.com/"
               ><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i
+            ></a> -->
+            <a href="https://www.linkedin.com/company/datanigma/?originalSubdomain=in"
+              ><i id="social-li" class="fa fa-twitter-square fa-3x social"></i
             ></a>
-            <a href="https://twitter.com/"
-              ><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i
-            ></a>
-            <a href="https://plus.google.com/"
+            <!-- <a href="https://plus.google.com/"
               ><i
                 id="social-gp"
                 class="fa fa-google-plus-square fa-3x social"
               ></i
-            ></a>
+            ></a> -->
             <a href="info@careerskart.in"
               ><i id="social-em" class="fa fa-envelope-square fa-3x social"></i
             ></a>
           </div>
         </div>
-        <div class="col-md-3 footer-two">
+        <div class="col-md-3 footer-three footinfo">
           <h5>Information</h5>
           <ul>
-            <li><a href="maintenance.html">Maintenance Tips</a></li>
-            <li><a href="contact.html">Locations</a></li>
-            <li><a href="about.html">Testimonials</a></li>
-            <li><a href="about.html">Careers</a></li>
-            <li><a href="about.html">Partners</a></li>
-          </ul>
-        </div>
-        <div class="col-md-3 footer-three">
-          <h5>Helpful Links</h5>
-          <ul>
-            <li><a href="maintenance.html">Maintenance Tips</a></li>
-            <li><a href="contact.html">Locations</a></li>
-            <li><a href="about.html">Testimonials</a></li>
-            <li><a href="about.html">Careers</a></li>
-            <li><a href="about.html">Partners</a></li>
-          </ul>
-        </div>
-        <div class="col-md-2 footer-four">
-          <h5>Helpful Links</h5>
-          <ul>
-            <li><a href="maintenance.html">Maintenance Tips</a></li>
-            <li><a href="contact.html">Locations</a></li>
-            <li><a href="about.html">Testimonials</a></li>
-            <li><a href="about.html">Careers</a></li>
+            <li><a href="https://goo.gl/maps/kvJgY66RJZsXQF589">Locations</a></li>
+            <li><a href="">Careers</a></li>
             <li><a href="about.html">Partners</a></li>
           </ul>
         </div>
@@ -282,9 +208,21 @@
               <p>CopyRight © 2022 Rights Reserved: Careerskart</p>
             </div>
           </div>
-          <!-- End Col -->
         </div>
       </div>
     </div>
   </div>
 </div>
+<link
+  href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
+  rel="stylesheet"
+  id="bootstrap-css"
+/>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
+<link
+  href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
+  rel="stylesheet"
+/>
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
