--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,11 +6,11 @@
     About
   </span>
   <div class="spacer"></div>
-  <button  class="NavButton" *ngIf="loggedIn" mat-raised-button routerLink="/candidate-profile/{{candidateId}}">Hi, {{candidateName}}!</button>
-  <button  mat-flat-button *ngIf="userType == 'Seeker' && loggedIn" routerLink="/applied-jobs" routerLinkActive="router-link-active" class="headerbutton NavButton">
+  <button  class="NavButton" *ngIf="loggedIn" mat-raised-button routerLink="/candidate-profile/{{candidateId}}">Hi,{{candidateName}} !</button>
+  <button  mat-flat-button *ngIf="userType == 'seeker' && loggedIn" routerLink="/applied-jobs" routerLinkActive="router-link-active" class="headerbutton NavButton">
     <span>Applied Jobs</span>
   </button>
-  <button mat-flat-button *ngIf="userType == 'Employer' && loggedIn" routerLink="/applied-candidates" routerLinkActive="router-link-active" class="headerbutton NavButton">
+  <button mat-flat-button *ngIf="userType == 'employer' && loggedIn" routerLink="/applied-candidates" routerLinkActive="router-link-active" class="headerbutton NavButton">
     <span>Applied Candidates</span>
   </button>
   <div class="example-label example-button-row">
