--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<app-find-jobs *ngIf="userType == 'Seeker'">
+<app-find-jobs *ngIf="userType == 'seeker'">
     
 </app-find-jobs>
-<app-employer *ngIf="userType == 'Employer'"></app-employer>
+<app-employer *ngIf="userType == 'employer'"></app-employer>
