--- a/src/app/about-us/about-us.component.scss
+++ b/src/app/about-us/about-us.component.scss
@@ -270,18 +270,9 @@ i {
     padding: 0 8px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
+.footinfo{
+  margin-left: 100px;
+}
 
 
 
@@ -294,7 +285,6 @@ i {
   letter-spacing:1px;
   font-weight:800;
   text-transform: uppercase;
-      webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
     -moz-box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
     -ms-box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
     -o-box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
